# txdedit

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  flake.nix  resources.qrc
.github/workflows/: release.yml
core/: TXDArchive.cpp  TXDArchive.h  TXDConverter.cpp  TXDConverter.h  TXDTextureHeader.cpp  TXDTextureHeader.h  TXDTypes.h
examples/gta3/: infernus.txd
gui/: AboutDialog.cpp  AboutDialog.h  CheckBox.h  GameVersionDialog.cpp  GameVersionDialog.h  MainWindow.cpp  MainWindow.h  TXDModel.cpp  TXDModel.h  TextureListWidget.cpp  TextureListWidget.h  TexturePreviewWidget.cpp  TexturePreviewWidget.h  TexturePropertiesWidget.cpp  TexturePropertiesWidget.h  TextureViewWidget.cpp  TextureViewWidget.h  main.cpp
icons/: mac.icns
libtxd/: txd_converter.cpp  txd_dictionary.cpp  txd_dictionary.h
